<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/image">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location"
        android:padding="10dp"
        android:cursorVisible="true"
        android:id="@+id/location"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#000000"
        android:background="@drawable/rectangle"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:background="#ffe4e1"
        android:onClick="search"
        android:text="go"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go"
        android:id="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:id="@+id/city"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_c"
            android:id="@+id/temperature"
            android:textSize="72sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="invisible"/>


        <TextView
            android:id="@+id/forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/description"
            android:textColor="#8b8989"
            android:textSize="20sp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:id="@+id/linear_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/humidity"
            android:textColor="#1DA6EF"
            android:textSize="17sp"
            android:id="@+id/humidity_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:layout_marginLeft="80dp"
            android:textSize="17sp"
            android:textColor="#1DA6EF"
            android:id="@+id/pressure_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textSize="17sp"
            android:layout_marginLeft="80dp"
            android:textColor="#1DA6EF"
            android:layout_marginRight="10dp"
            android:id="@+id/wind_text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_horizontal"
        android:id="@+id/linear_value">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginLeft="40dp"
            android:id="@+id/humidity_value"
            android:textSize="10sp"
            android:textColor="#000000"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_hg"
            android:layout_marginLeft="120dp"
            android:id="@+id/pressure_value"
            android:textSize="10sp"
            android:textColor="#000000"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_km_h"
            android:layout_marginLeft="100dp"
            android:id="@+id/wind_value"
            android:textSize="10sp"
            android:textColor="#000000"
            android:visibility="invisible"/>

    </LinearLayout>


</RelativeLayout>